# android-files

./: .editorconfig  .gitignore  .gitmodules  AndroidManifest.xml  build.gradle  gradle.properties  install_android_jars.sh  pom.xml  release.sh  settings.gradle  setup.sh
fs/: CMakeLists.txt  build.gradle
fs/src/androidTest/: AndroidManifest.xml
fs/src/androidTest/java/l/files/fs/: FilesTest.java  LocalFileBatchObserveTest.java  LocalFileTraverseTest.java  LocalStatTest.java  NameParcelableTest.java  ObservableDownloadTest.java  ObservableTest.java  PathCreateDirectoriesTest.java  PathCreateDirectoryFailureAccessDeniedTest.java  PathCreateDirectoryFailureAlreadyExistsTest.java  PathCreateDirectorySuccessTest.java  PathCreateDirectoryWithPermissionTest.java  PathCreateFailureAccessDeniedTest.java  PathCreateFailureAlreadyExistsTest.java  PathCreateFailureTest.java  PathCreateFileFailureAccessDeniedTest.java  PathCreateFileFailureAlreadyExistsTest.java  PathCreateFileSuccessTest.java  PathCreateSuccessTest.java  Strings.java  (+18 more)
fs/src/androidTest/java/linux/: DirentTest.java  ErrnoTest.java  FcntlTest.java  InotifyTest.java  LimitsTest.java  StrTest.java  UnistdTest.java  VfsTest.java
fs/src/main/: AndroidManifest.xml
fs/src/main/java/linux/: Dirent.java  Errno.java  ErrnoException.java  Fcntl.java  Inotify.java  Limits.java  Stdio.java  Str.java  Unistd.java  Vfs.java
fs/src/main/jni/: l_files_fs_FileSystem.c  l_files_fs_Observable.c  l_files_fs_Path.c  l_files_fs_Stat.c  l_files_fs_local_LocalObservable.c  linux_Dirent.c  linux_Fcntl.c  linux_Vfs.c  util.c  util.h
(+3652 files in other folders)
